Main(card) added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/df0c9efe3e.js" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/css.css"/>
 
@@ -22,7 +23,7 @@
     <div class="left cmptt-menu">
           <div class="sidebar-menu">
             <ul>
-              <a href="/" class="waves-effect"><img src="img/logo-cmptt.svg"></a>
+              <a href="/" class="logoimg"><img src="img/logo-cmptt.svg"></a>
               <li><a href="#" class="waves-effect"><i class="fas fa-record-vinyl"></i></a></li>
             </ul>
             <div class="clearfix"></div>
@@ -34,10 +35,11 @@
     
     <div class="Header">
       <div class="row py-0 py-md-5 justify-content-between align-items-center">
-        <div class="col-sm-10 col-lg-6 all-text-white my-5 mt-md-0">
+        <div class="col-sm-10 col-lg-6 all-text-white mt-md-0">
           <div class="text-left py-0">
             <h1>hello<span>.</span></h1>
             <p>On est vraiment trop balèzes et on cherche des stages à la hauteur de nos talents ! ptain on vous déchire net sur place !!!</p>
+            <a href="#" class="scrolldown"><i class="fas fa-arrow-down"></i></a>
           </div>
         </div>
       </div>
@@ -45,6 +47,333 @@
   
   </header>
 
+  <div class="cmpttmain container text-center">
+    <h2>La Team</h2>
+    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+<div class="row">
+<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 220">
+    <div class="flip-card">
+
+        <div class="card-front">
+            <figure>
+                <div class="img-bg"></div>
+               <img src="img/vosges.jpg" alt="Brohm Lake">
+                <figcaption><img class="avatarPic"
+                                 src="img/Julien_Sz_ld.jpg"
+                                 alt="Avatar Julien"></figcaption>
+
+            </figure>
+
+
+            <ul>
+                <li>Alan BAUDON</li>
+                <li>25 ans</li>
+                <li>Epinal / Nancy</li>
+                <li>Detail 4</li>
+                <li>Detail 5</li>
+            </ul>
+        </div>
+
+        <div class="card-back">
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+            </figure>
+
+            <button>Book</button>
+
+            <div class="design-container">
+                <span class="design design--1"></span>
+                <span class="design design--2"></span>
+                <span class="design design--3"></span>
+                <span class="design design--4"></span>
+                <span class="design design--5"></span>
+                <span class="design design--6"></span>
+                <span class="design design--7"></span>
+                <span class="design design--8"></span>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 170">
+    <div class="flip-card">
+
+        <div class="card-front">
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1545436864-cd9bdd1ddebc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Image 2">
+                <figcaption>Légende</figcaption>
+            </figure>
+
+            <ul>
+                <li>Detail 1</li>
+                <li>Detail 2</li>
+                <li>Detail 3</li>
+                <li>Detail 4</li>
+                <li>Detail 5</li>
+            </ul>
+        </div>
+
+        <div class="card-back">
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1545436864-cd9bdd1ddebc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="image-2">
+            </figure>
+
+            <button>Book</button>
+
+            <div class="design-container">
+                <span class="design design--1"></span>
+                <span class="design design--2"></span>
+                <span class="design design--3"></span>
+                <span class="design design--4"></span>
+                <span class="design design--5"></span>
+                <span class="design design--6"></span>
+                <span class="design design--7"></span>
+                <span class="design design--8"></span>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+
+<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 350">
+    <div class="flip-card">
+
+        <div class="card-front">
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+                <figcaption>Brohm Lake</figcaption>
+            </figure>
+
+            <ul>
+                <li>Detail 1</li>
+                <li>Detail 2</li>
+                <li>Detail 3</li>
+                <li>Detail 4</li>
+                <li>Detail 5</li>
+            </ul>
+        </div>
+
+        <div class="card-back">
+            <!-- only if the image is necessary -->
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+            </figure>
+
+            <button>Book</button>
+
+            <!-- can add svg here and remove these eight spans -->
+            <div class="design-container">
+                <span class="design design--1"></span>
+                <span class="design design--2"></span>
+                <span class="design design--3"></span>
+                <span class="design design--4"></span>
+                <span class="design design--5"></span>
+                <span class="design design--6"></span>
+                <span class="design design--7"></span>
+                <span class="design design--8"></span>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+
+<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 350">
+    <div class="flip-card">
+
+        <div class="card-front">
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+                <figcaption>Brohm Lake</figcaption>
+            </figure>
+
+            <ul>
+                <li>Detail 1</li>
+                <li>Detail 2</li>
+                <li>Detail 3</li>
+                <li>Detail 4</li>
+                <li>Detail 5</li>
+            </ul>
+        </div>
+
+        <div class="card-back">
+            <!-- only if the image is necessary -->
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+            </figure>
+
+            <button>Book</button>
+
+            <!-- can add svg here and remove these eight spans -->
+            <div class="design-container">
+                <span class="design design--1"></span>
+                <span class="design design--2"></span>
+                <span class="design design--3"></span>
+                <span class="design design--4"></span>
+                <span class="design design--5"></span>
+                <span class="design design--6"></span>
+                <span class="design design--7"></span>
+                <span class="design design--8"></span>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+
+<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 350">
+    <div class="flip-card">
+
+        <div class="card-front">
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+                <figcaption>Brohm Lake</figcaption>
+            </figure>
+
+            <ul>
+                <li>Detail 1</li>
+                <li>Detail 2</li>
+                <li>Detail 3</li>
+                <li>Detail 4</li>
+                <li>Detail 5</li>
+            </ul>
+        </div>
+
+        <div class="card-back">
+            <!-- only if the image is necessary -->
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+            </figure>
+
+            <button>Book</button>
+
+            <!-- can add svg here and remove these eight spans -->
+            <div class="design-container">
+                <span class="design design--1"></span>
+                <span class="design design--2"></span>
+                <span class="design design--3"></span>
+                <span class="design design--4"></span>
+                <span class="design design--5"></span>
+                <span class="design design--6"></span>
+                <span class="design design--7"></span>
+                <span class="design design--8"></span>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+
+<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+<div class="flip-card-container col-md-4 col-sm-6 col-xs-12 col-md-4 col-sm-6 col-xs-12" style="--hue: 350">
+    <div class="flip-card">
+
+        <div class="card-front">
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+                <figcaption>Brohm Lake</figcaption>
+            </figure>
+
+            <ul>
+                <li>Detail 1</li>
+                <li>Detail 2</li>
+                <li>Detail 3</li>
+                <li>Detail 4</li>
+                <li>Detail 5</li>
+            </ul>
+        </div>
+
+        <div class="card-back">
+            <!-- only if the image is necessary -->
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+            </figure>
+
+            <button>Book</button>
+
+            <!-- can add svg here and remove these eight spans -->
+            <div class="design-container">
+                <span class="design design--1"></span>
+                <span class="design design--2"></span>
+                <span class="design design--3"></span>
+                <span class="design design--4"></span>
+                <span class="design design--5"></span>
+                <span class="design design--6"></span>
+                <span class="design design--7"></span>
+                <span class="design design--8"></span>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+
+<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 350">
+    <div class="flip-card">
+
+        <div class="card-front">
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+                <figcaption>Brohm Lake</figcaption>
+            </figure>
+
+            <ul>
+                <li>Detail 1</li>
+                <li>Detail 2</li>
+                <li>Detail 3</li>
+                <li>Detail 4</li>
+                <li>Detail 5</li>
+            </ul>
+        </div>
+
+        <div class="card-back">
+            <!-- only if the image is necessary -->
+            <figure>
+                <div class="img-bg"></div>
+                <img src="https://images.unsplash.com/photo-1486162928267-e6274cb3106f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brohm Lake">
+            </figure>
+
+            <button>Book</button>
+
+            <!-- can add svg here and remove these eight spans -->
+            <div class="design-container">
+                <span class="design design--1"></span>
+                <span class="design design--2"></span>
+                <span class="design design--3"></span>
+                <span class="design design--4"></span>
+                <span class="design design--5"></span>
+                <span class="design design--6"></span>
+                <span class="design design--7"></span>
+                <span class="design design--8"></span>
+            </div>
+        </div>
+
+    </div>
+</div>
+<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+
+</div><!--end mpttmain-->
+</div><!--end mpttmain-->
 </div> <!--end body-w-->
 
 
