--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
   <div class="cmpttmain container text-center">
     <h2>La Team</h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-<div class="row">
-<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 220">
+<div class="row"></div>
+<!-- flip-card-container -->
+<div class="mycard col-md-4 col-sm-6 col-xs-12">
+<div class="flip-card-container" style="--hue: 220">
     <div class="flip-card">
 
         <div class="card-front">
@@ -97,9 +98,10 @@
 
     </div>
 </div>
-<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 170">
+<!-- /flip-card-container --></div>
+<!-- flip-card-container -->
+<div class="mycard col-md-4 col-sm-6 col-xs-12">
+<div class="flip-card-container" style="--hue: 170">
     <div class="flip-card">
 
         <div class="card-front">
@@ -140,10 +142,11 @@
 
     </div>
 </div>
-<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-
-<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 350">
+<!-- /flip-card-container -->
+</div>
+<!-- flip-card-container -->
+<div class="mycard col-md-4 col-sm-6 col-xs-12">
+<div class="flip-card-container" style="--hue: 350">
     <div class="flip-card">
 
         <div class="card-front">
@@ -186,10 +189,11 @@
 
     </div>
 </div>
-<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-
-<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 350">
+<!-- /flip-card-container -->
+</div>
+<!-- flip-card-container -->
+<div class="mycard col-md-4 col-sm-6 col-xs-12">
+<div class="flip-card-container" style="--hue: 350">
     <div class="flip-card">
 
         <div class="card-front">
@@ -232,10 +236,11 @@
 
     </div>
 </div>
-<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-
-<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 350">
+<!-- /flip-card-container -->
+</div>
+<!-- flip-card-container -->
+<div class="mycard col-md-4 col-sm-6 col-xs-12">
+<div class="flip-card-container" style="--hue: 350">
     <div class="flip-card">
 
         <div class="card-front">
@@ -278,10 +283,11 @@
 
     </div>
 </div>
-<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-
-<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-<div class="flip-card-container col-md-4 col-sm-6 col-xs-12 col-md-4 col-sm-6 col-xs-12" style="--hue: 350">
+<!-- /flip-card-container -->
+</div>
+<!-- flip-card-container -->
+<div class="mycard col-md-4 col-sm-6 col-xs-12">
+<div class="flip-card-container" style="--hue: 350">
     <div class="flip-card">
 
         <div class="card-front">
@@ -324,10 +330,11 @@
 
     </div>
 </div>
-<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-
-<!-- flip-card-container col-md-4 col-sm-6 col-xs-12 -->
-<div class="flip-card-container col-md-4 col-sm-6 col-xs-12" style="--hue: 350">
+<!-- /flip-card-container -->
+</div>
+<!-- flip-card-container -->
+<div class="mycard col-md-4 col-sm-6 col-xs-12">
+<div class="flip-card-container" style="--hue: 350">
     <div class="flip-card">
 
         <div class="card-front">
@@ -370,7 +377,7 @@
 
     </div>
 </div>
-<!-- /flip-card-container col-md-4 col-sm-6 col-xs-12 -->
+<!-- /flip-card-container -->
 
 </div><!--end mpttmain-->
 </div><!--end mpttmain-->
