--- a/index.html
+++ b/index.html
@@ -19,36 +19,27 @@
   <body>
    
 <div class="body-w">
-  <header>
-    <div class="left cmptt-menu">
-          <div class="sidebar-menu">
-            <ul>
-              <a href="/" class="logoimg"><img src="img/logo-cmptt.svg" alt=""></a>
-              <li><a href="#" class="waves-effect"><i class="fas fa-record-vinyl"></i></a></li>
-            </ul>
-            <div class="clearfix"></div>
-          </div>
-          <!-- Sidebar -->
-    </div><!--class="left cmptt-menu"-->
+  <header class="Header">
+              <div class="logo">
+                  <a href="/">
+                      <div class="brand"><img src="img/logo-cmptt.svg" alt="CMPTT" title="CMP"></div>
+                  </a>
+              </div>
 
-    <div class="clearfix"></div>
-    
-    <div class="Header">
-      <div class="row py-0 py-md-5 justify-content-between align-items-center">
-        <div class="col-sm-10 col-lg-6 all-text-white mt-md-0">
-          <div class="text-left py-0">
-            <h1>hello<span>.</span></h1>
-            <p>On est vraiment trop balèzes et on cherche des stages à la hauteur de nos talents ! ptain on vous déchire net sur place !!!</p>
+      <div class="container">
+        <div class="row content">
+          <div class="text-center py-0 sub-title-cmptt">
+            <h1>Nous cherchons des Stages <span>!</span></h1>
+            <p>Nos dates de stages:<br> du <span>21 Septembre 2020</span> au <span>02 Octobre 2020</span> <br>et du <span>23 Octobre 2020</span> au <span>04 Décembre 2020</span></p>
             <a href="#" class="scrolldown"><i class="fas fa-arrow-down"></i></a>
           </div>
         </div>
       </div>
-    </div><!--end Header-->
-  
+
   </header>
 
   <div class="cmpttmain container text-center">
-    <h2>La Team</h2>
+    <h2>Notre équipe</h2>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 <div class="row">
 <div class="mycard col-md-3 col-sm-6 col-xs-12">
